# seletivo-intuitivecare

./: README.md  docker-compose.yml  pyproject.toml
src/seletivo_intuitivecare/: scrape.py  teste3.sql  transform.py  utils.py
