[tool.poetry]
name = "seletivo-intuitivecare"
version = "0.1.0"
description = "Teste processo seletivo IntutiveCare"
authors = ["Juan Monteiro <juan.monteiro@jmonteiro.net>"]
readme = "README.md"
packages = [{include = "seletivo_intuitivecare", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
